started working on predictions

--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <title>General</title>
+    <title>Predictii</title>
     {{ js_resources|indent(4)|safe }}
     {{ css_resources|indent(4)|safe }}
     {{ script|indent(4)|safe }}
@@ -14,8 +14,8 @@
 
 <!-- Sidebar -->
 <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:10%; box-shadow: 2px 0px 5px 1px rgba(0,0,0,0.5);">
-    <a href="#" class="w3-bar-item w3-button w3-border-bottom w3-gray">Situatia generala</a>
-    <a href="#" class="w3-bar-item w3-button w3-border-bottom">Predictii</a>
+    <a href="#" class="w3-bar-item w3-button w3-border-bottom">Situatia generala</a>
+    <a href="#" class="w3-bar-item w3-button w3-border-bottom w3-gray">Predictii</a>
     <a href="#" class="w3-bar-item w3-button w3-border-bottom">Masuri</a>
     <a href="#" class="w3-bar-item w3-button w3-border-bottom">Surse</a>
 
