added predictions plot with legend

--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -14,9 +14,8 @@
 
 <!-- Sidebar -->
 <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:10%; box-shadow: 2px 0px 5px 1px rgba(0,0,0,0.5);">
-    <a href="#" class="w3-bar-item w3-button w3-border-bottom">Situatia generala</a>
-    <a href="#" class="w3-bar-item w3-button w3-border-bottom w3-gray">Predictii</a>
-    <a href="#" class="w3-bar-item w3-button w3-border-bottom">Masuri</a>
+    <a href="{{ url_for('index') }}" class="w3-bar-item w3-button w3-border-bottom">Situatia generala</a>
+    <a href="{{ url_for('predictions') }}" class="w3-bar-item w3-button w3-border-bottom w3-gray">Predictii</a>
     <a href="#" class="w3-bar-item w3-button w3-border-bottom">Surse</a>
 
 </div>
