--- a/templates/index.html
+++ b/templates/index.html
@@ -6,23 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>General</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
     {{ js_resources|indent(4)|safe }}
     {{ css_resources|indent(4)|safe }}
     {{ script|indent(4)|safe }}
 </head>
 <body>
 
-<!-- Sidebar -->
-<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:10%; box-shadow: 2px 0px 5px 1px rgba(0,0,0,0.5);">
-    <a href="{{ url_for('index') }}" class="w3-bar-item w3-button w3-border-bottom w3-gray">Situatia generala</a>
-    <a href="{{ url_for('predictions') }}" class="w3-bar-item w3-button w3-border-bottom">Predictii</a>
-    <a href="#" class="w3-bar-item w3-button w3-border-bottom">Surse</a>
+<div class="wrapper d-flex align-items-stretch">
+    <nav id="sidebar">
 
-</div>
+    <h1><a href="index.html" class="logo">Project Name</a></h1>
+    <ul class="list-unstyled components mb-5">
+    <li class="active">
+        <a href="{{ url_for('index') }}"><span class="fa fa-home mr-3"></span>Situatia generala</a>
+    </li>
+    <li>
+        <a href="{{ url_for('predictions') }}"><span class="fa fa-user mr-3"></span>Predictii</a>
+    </li>
+    <li>
+        <a href="#"><span class="fa fa-sticky-note mr-3"></span> Surse</a>
+    </li>
+    </ul>
 
-<div style="margin-left:15%; margin-right:5%">
-    {{ div|indent(4)|safe }}
-</div>
+    </nav>
 
+    <div id="content" class="p-4 p-md-5 pt-5">
+        {{ div|indent(4)|safe }}</div>
+    </div>
 </body>
 </html>
