--- a/templates/sources.html
+++ b/templates/sources.html
@@ -32,9 +32,7 @@
     pentru cazurile extreme.</p>
 <h3>Sursele de date</h3>
 <p>Site-ul culege datele direct de la OMS si CDC, valabile <a href="https://github.com/CSSEGISandData/COVID-19">la
-    aceasta adresa.</a>. Pentru a le accesa, se fac requesturi odata la <b>3 ore</b> la <a
-        href="https://github.com/pomber/covid19">acest API</a>,
-    care prelucreaza datele in format .csv de pe sursa oficial intr-un format .json. Din acest motiv,
+    aceasta adresa.</a>. Din acest motiv,
     datele afisate sunt limitate la aceeasi rata de updatare ca cele de pe sursa oficiala, insemnand ca pot fi in urma
     cu 24h fata de cele de pe site-urile de stiri locale.</p>
 <h3>Contact</h3>
